# VOCAL-IQ

./: .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  README.md  UI-UX-ELEVATION-PLAN.md  biome.json  ecosystem.config.cjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: ci.yml
apps/api/: biome.json  package.json  tsconfig.json  vitest.config.ts
apps/mobile/: README.md  app.json  package.json
apps/voice/: pyproject.toml
apps/voice/app/: config.py  main.py
apps/voice/app/calls/: __init__.py  events.py  lifecycle.py  livekit_service.py  messenger_router.py  models.py  router.py  whatsapp_router.py
apps/voice/app/loop/: __init__.py  chunker.py  context.py  emotion.py  endpointer.py  engine.py  language.py  livekit_agent.py  metrics.py  pci.py  squad.py  vad.py
apps/voice/app/providers/: __init__.py  contracts.py  pricing.py
apps/voice/app/providers/adapters/: __init__.py  deepgram.py  elevenlabs.py  openai.py
apps/voice/app/telephony/: __init__.py  amd.py  messenger_webrtc.py  twilio_dialer.py  webrtc_audio.py  whatsapp_audio.py  whatsapp_dtmf.py  whatsapp_sdp.py  whatsapp_webrtc.py
apps/voice/app/tools/: __init__.py  executor.py  ssrf.py
apps/voice/spikes/whatsapp_calling/: README.md  media.py  server.py
apps/voice/tests/: conftest.py  loop_fakes.py  test_calls_api.py  test_calls_dispatch.py  test_emotion.py  test_events_drain.py  test_health.py  test_language.py  test_lifecycle.py  test_livekit.py  test_livekit_agent.py  test_livekit_call_live.py  test_loop_components.py  test_loop_engine.py  test_messenger_control.py  test_pci.py  test_providers.py  test_providers_adapters.py  test_squad.py  test_telephony.py  test_tools.py  test_webrtc_audio.py  test_whatsapp_bridge.py  test_whatsapp_control.py
apps/web/: .gitignore  instrumentation-client.ts  instrumentation.ts  middleware.ts  next.config.ts  package.json  playwright.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json
apps/workers/: package.json  tsconfig.json
docs/: 00-START-HERE.md  ADVANCED-TIER.md  API-GUIDE.md  ARCHITECTURE.md  BUILD-LOG.md  CODE-PATTERNS.md  CODING-RULES.md  COMPETITOR-FEATURE-ANALYSIS.md  DATA-MODEL.md  DATAVIZ.md  DESIGN-SYSTEM.md  GIT-WORKFLOW.md  GO-LIVE-CHECKLIST.md  MESSENGER-CALLING-AI-ENGINE-PLAN.md  PARITY-INDEX.md  PREREQUISITES.md  PRI-TELEPHONY-INTEGRATION-PLAN.md  PROJECT-FEATURES-EXPLAINED.docx  PROJECT-FEATURES-EXPLAINED.md  PROMPT-INDEX.md  README.md  RESELLER-GUIDE.md  SELF-AUDIT-PROTOCOL.md  SELF-HOSTING.md  TECH-STACK.md  USER-GUIDE.md  UX-AUDIT.md  UX-CONTRIBUTING.md  UX-QA.md  WHATSAPP-CALLING-AI-ENGINE-PLAN.md
docs/runbooks/: data-deletion.md  incident-response.md  key-rotation.md  kill-switch.md  messenger-calling-setup.md  messenger-calling-video-design.md  rollback.md  whatsapp-calling-sip-asterisk.md  whatsapp-calling-spike-findings.md  whatsapp-calling-video-design.md
docs/super-prompts/: DAY-00-scaffold.md  DAY-01-ci-docker-config.md  DAY-02-shared-types-env-errors.md  DAY-03-auth-sessions-mfa.md  DAY-04-data-model-rls.md  DAY-05-rbac-tenant-guard.md  DAY-06-router-skeleton-first-ai-call.md  DAY-07-provider-router-core.md  DAY-08-voice-service-skeleton.md  DAY-09-live-call-loop.md  DAY-10-outbound-voicemail.md  DAY-11-inbound-answering.md  DAY-12-recording-transcription.md  DAY-13-cost-attribution.md  DAY-14-first-dashboard.md  DAY-15-stripe-billing-metering.md  DAY-16-web-call-widget.md  DAY-17-reactflow-canvas.md  DAY-18-core-nodes.md  DAY-19-tool-function-nodes.md  DAY-20-knowledge-rag.md  DAY-21-collect-transfer-subflow.md  DAY-22-flow-compiler.md  DAY-23-test-panel-versioning.md  DAY-24-persona-studio-templates.md  DAY-25-multilingual.md  DAY-26-voice-library-cloning.md  DAY-27-squads-multiagent.md  DAY-28-campaign-manager.md  DAY-29-lead-workspace.md  DAY-30-ab-testing.md  DAY-31-post-call-intelligence.md  DAY-32-conversation-simulator.md  DAY-33-batch-testing-evals.md  DAY-34-agent-memory.md  DAY-35-sip-trunk-engine.md  DAY-36-appointments-gcal.md  DAY-37-sheets-forms.md  (+82 more)
infra/: ON-PREM-RUNBOOK.md  docker-compose.yml  releases.json  scale-stores.docker-compose.yml
scripts/: check-no-secrets.mjs  gen-features-docx.py
(+559 files in other folders)
