[project]
name = "vocaliq-voice"
version = "0.0.0"
description = "VocalIQ real-time voice service (FastAPI + Pipecat/LiveKit)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pyjwt>=2.10.0",
    "httpx>=0.28.0",
    "websockets>=14.0",
    "livekit-api>=0.8.0",
    "livekit>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "pyright>=1.1.390",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# Explicit package discovery so `app` (+ subpackages) is importable after `pip
# install -e` regardless of how many top-level dirs exist (auto-discovery is
# ambiguous with app/ + tests/).
[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pyright]
include = ["app", "tests"]
# Pin analysis to the supported runtime, not whatever local interpreter is active.
pythonVersion = "3.12"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Put the service root on sys.path so `import app` resolves deterministically,
# independent of editable-install state (PEP 660 finder vs .pth).
pythonpath = ["."]
# `async def` tests run without a per-test marker (pytest-asyncio).
asyncio_mode = "auto"
